# Projeto_Gerenciador_de_Cartoes

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Gerenciador-de-cartoes/: dados.c  dados.h  main.c  uteis.c
